# DL_CNN_Practice

./: README.md  setup.cfg  setup.py  template.py
research/: trials.ipynb
src/deepClassifier/utils/: common.py
