[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3   # Helps you  run unit test or integration test
    mypy>=0.971     # Helps you with typing error
    flake8>=5.0.4   # Helps you find other mistakes like extra spaces
    tox>=3.25.1     # Helps you working env
    black>=22.8.0   # Helps you with python code formating
    mccabe<0.7
    pyqtwebengine<5.13
    pyqt5<5.13


[options.package_data]
deepClassifier = py.typed
  
[flake8]  # Helps you find other mistakes like extra spaces
max-line-length = 160
exclude = __init__.py
